--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -1,6 +1,6 @@
 <div class='join-container flex-column'>
     <div class='flex-column gap15'>
-        <input type="text" [(ngModel)]="playerName" placeholder="Enter your name">
+        <input id="player-name-join" type="text" [(ngModel)]="playerName" placeholder="Enter your name">
 
         <div class='flex-row gap15'>
             <!-- <button (click)="joinPublicGame()">Join public game</button> -->
