--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,18 +1,25 @@
 <div id='players-container' class='flex-column'>
-	<div class='player-box flex-column' *ngFor="let p of game.Players()">
+	<div class='player-box flex-column'>
+		<div class='player-score' [ngStyle]="{'color': player.Score() < 0 ? 'red' : 'black'}">
+			{{ player.Score() < 0 ? '-' : '' }}${{ abs(player.Score()) }}
+		</div>
+		<div class='player-name'>
+			<div>
+				{{ player.Conn() ? player.Name() : 'Waiting for player to join' }}
+			</div>
+		</div>
+		<div>
+			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && (player.OnClock())" name="timer-outline"></ion-icon>
+		</div>
+	</div>
+	<div class='player-box flex-column' *ngFor="let p of game.OtherPlayers()">
 		<div class='player-score' [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">
 			{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }}
 		</div>
 		<div class='player-name'>
 			<div>
-				<ion-icon *ngIf="p.id == player.Id()" name="person-outline"></ion-icon>
-			</div>
-			<div>
 				{{ p.conn ? p.name : 'Waiting for player to join' }}
 			</div>
-		</div>
-		<div>
-			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && (p.canPick || p.canBuzz || p.canAnswer || p.canWager)" name="timer-outline"></ion-icon>
 		</div>
 	</div>
 </div>
