--- a/fe-jeopardy/src/styles.less
+++ b/fe-jeopardy/src/styles.less
@@ -3,7 +3,7 @@
     --jeopardy-lightblue: #d7ebff;
     --jeopardy-yellow: #ffcc00;
     --header-height: 50px;
-    --players-container-width: 120px;
+    --players-container-width: 18em;
     --question-box-width: 450px;
     --question-box-padding: 30px;
 }
