--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,26 +1,33 @@
 <div id='players-container' class='flex-column'>
 	<div class='player-box flex-column'>
-		<div class='player-score' [ngStyle]="{'color': player.Score() < 0 ? 'red' : 'black'}">
-			{{ player.Score() < 0 ? '-' : '' }}${{ abs(player.Score()) }}
-		</div>
-		<div class='player-name'>
+		<div class='player-info flex-row'>
+			<div>
+				<img src="../../assets/face.jpeg" alt="">
+			</div>
 			<div>
 				{{ player.Conn() ? player.Name() : 'Waiting for player to join' }}
 			</div>
 		</div>
+		<div class='player-score flex-column' [ngStyle]="{'color': player.Score() < 0 ? 'red' : 'black'}">
+			{{ player.Score() < 0 ? '-' : '' }}${{ abs(player.Score()) }}
+		</div>
 		<div>
-			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && (player.OnClock())" name="timer-outline"></ion-icon>
+			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && player.OnClock()" name="timer-outline"></ion-icon>
 		</div>
 	</div>
 	<div class='player-box flex-column' *ngFor="let p of game.OtherPlayers()">
-		<div class='player-score' [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">
-			{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }}
-		</div>
-		<div class='player-name'>
+		<div class='player-info flex-row'>
+			<div>
+				<img src="../../assets/face.jpeg" alt="">
+			</div>
 			<div>
 				{{ p.conn ? p.name : 'Waiting for player to join' }}
 			</div>
 		</div>
+		<div class='player-score flex-column' [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">
+			{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }}
+		</div>
+		<div></div>
 	</div>
 </div>
 
