--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -7,24 +7,33 @@
     border-left: 1px solid black;
 
     .player-box {
-        justify-content: center;
-        text-align: center;
-        padding: 10px;
+        padding: 1em;
         border-bottom: 1px solid black;
-        gap: 10px;
+        gap: 1em; 
+        
+        div {
+            flex: 0 0 auto;
+        }
 
         ion-icon {
             font-size: 2em;
         }
 
-        .player-score {
-            align-items: flex-end;
-            display: flex;
-            justify-content: center;
-        }
-
-        .player-name {
+        .player-info {
             word-break: break-word;
+            gap: 0.5em;
+            align-items: center;
+
+            div {
+                flex: 0 0 auto;
+            }
+
+            img {
+                width: 3em;
+                height:3em;
+                border-radius: 50%;
+                object-fit: cover;
+            }
         }
     }
 }
