--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -10,6 +10,13 @@
         padding: 1em;
         border-bottom: 1px solid black;
         gap: 1em; 
+        position: relative;
+
+        .timer-container {
+            position: absolute;
+            bottom: 1em;
+            right: 1em;
+        }
         
         div {
             flex: 0 0 auto;
@@ -23,6 +30,10 @@
             word-break: break-word;
             gap: 0.5em;
             align-items: center;
+
+            .player-name {
+                width: calc(var(--players-container-width) - 5.5em);
+            }
 
             div {
                 flex: 0 0 auto;
