--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -10,6 +10,9 @@
 		</div>
 		<div class='player-score flex-column' [ngStyle]="{'color': player.Score() < 0 ? 'red' : 'black'}">
 			{{ player.Score() < 0 ? '-' : '' }}${{ abs(player.Score()) }}
+			<span *ngIf="scoreChange != 0 && scoreId == player.Id()" [ngStyle]="{'color': scoreChange > 0 ? 'green' : 'red'}">
+				{{scoreChange > 0 ? '+' : '-'}}${{abs(scoreChange)}}
+			</span>
 		</div>
 		<div class="timer-container">
 			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && onClock(player.Player())" name="timer-outline"></ion-icon>
@@ -26,6 +29,9 @@
 		</div>
 		<div class='player-score flex-column' [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">
 			{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }}
+			<span *ngIf="scoreChange != 0 && scoreId == p.id" [ngStyle]="{'color': scoreChange > 0 ? 'green' : 'red'}">
+				{{scoreChange > 0 ? '+' : '-'}}${{abs(scoreChange)}}
+			</span>
 		</div>
 		<div class="timer-container">
 			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && onClock(p)" name="timer-outline"></ion-icon>
