--- a/fe-jeopardy/src/app/game/game.component.html
+++ b/fe-jeopardy/src/app/game/game.component.html
@@ -1,41 +1,9 @@
 <div id='players-container' class='flex-column'>
 	<div class='player-box flex-column'>
-		<div class='player-info flex-row'>
-			<div>
-				<img src="../../assets/face.jpeg" alt="">
-			</div>
-			<div class="player-name">
-				{{ player.Conn() ? player.Name() : 'Waiting for player to join' }}
-			</div>
-		</div>
-		<div class='player-score flex-column' [ngStyle]="{'color': player.Score() < 0 ? 'red' : 'black'}">
-			{{ player.Score() < 0 ? '-' : '' }}${{ abs(player.Score()) }}
-			<span *ngIf="scoreChange(player.Id())" [ngStyle]="{'color': scoreChange(player.Id()) > 0 ? 'green' : 'red'}">
-				{{scoreChange(player.Id()) > 0 ? '+' : '-'}}${{abs(scoreChange(player.Id()))}}
-			</span>
-		</div>
-		<div class="timer-container">
-			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && onClock(player.Player())" name="timer-outline"></ion-icon>
-		</div>
+		<app-player-podium [player]="player.Player()" [scoreChanges]="scoreChanges"></app-player-podium>
 	</div>
 	<div class='player-box flex-column' *ngFor="let p of game.OtherPlayers()">
-		<div class='player-info flex-row'>
-			<div>
-				<img src="../../assets/face.jpeg" alt="">
-			</div>
-			<div class="player-name">
-				{{ p.conn ? p.name : 'Waiting for player to join' }}
-			</div>
-		</div>
-		<div class='player-score flex-column' [ngStyle]="{'color': p.score < 0 ? 'red' : 'black'}">
-			{{ p.score < 0 ? '-' : '' }}${{ abs(p.score) }}
-			<span *ngIf="scoreChange(p.id) > 0" [ngStyle]="{'color': scoreChange(p.id) > 0 ? 'green' : 'red'}">
-				{{scoreChange(p.id) > 0 ? '+' : '-'}}${{abs(scoreChange(p.id))}}
-			</span>
-		</div>
-		<div class="timer-container">
-			<ion-icon *ngIf="!game.BoardIntro() && !game.IsPaused() && onClock(p)" name="timer-outline"></ion-icon>
-		</div>
+		<app-player-podium [player]="p" [scoreChanges]="scoreChanges"></app-player-podium>
 	</div>
 </div>
 
