--- a/fe-jeopardy/src/app/game/player-podium/player-podium.component.html
+++ b/fe-jeopardy/src/app/game/player-podium/player-podium.component.html
@@ -1,6 +1,6 @@
 <div class='player-info flex-row'>
     <div>
-        <img src="../../assets/face.jpeg" alt="">
+        <img [src]="player.imgUrl" alt="">
     </div>
     <div class="player-name">
         {{ player.conn ? player.name : 'Waiting for player to join' }}
