--- a/fe-jeopardy/src/app/game/player-podium/player-podium.component.less
+++ b/fe-jeopardy/src/app/game/player-podium/player-podium.component.less
@@ -26,13 +26,16 @@
             0% {
                 transform: translateY(0);
                 opacity: 1;
+                font-weight: 900;
             }
             50% {
                 opacity: 1;
+                font-weight: 400
             }
             100% {
                 transform: translateY(-3em);
                 opacity: 0;
+                font-weight: 100;
             }
         }
 
