--- a/fe-jeopardy/src/app/game/game.component.less
+++ b/fe-jeopardy/src/app/game/game.component.less
@@ -7,25 +7,10 @@
     border-left: 1px solid black;
 
     .player-box {
-        justify-content: center;
-        text-align: center;
-        padding: 10px;
+        padding: 1em;
         border-bottom: 1px solid black;
-        gap: 10px;
-
-        ion-icon {
-            font-size: 2em;
-        }
-
-        .player-score {
-            align-items: flex-end;
-            display: flex;
-            justify-content: center;
-        }
-
-        .player-name {
-            word-break: break-word;
-        }
+        gap: 1em; 
+        position: relative;
     }
 }
 
