answer timeout ui

--- a/fe-jeopardy/src/app/answers/answers.component.html
+++ b/fe-jeopardy/src/app/answers/answers.component.html
@@ -1,6 +1,12 @@
 <ul>
     <li *ngFor="let answer of game.CurQuestionAnswers()">
-        {{ answer.player.name == player.Name() ? 'You' : answer.player.name }} answered {{ answer.correct ? 'corrrectly' : 'incorrectly' }} with <b>{{ answer.answer }}</b>
+        {{ answer.player.name == player.Name() ? 'You' : answer.player.name }}
+        <span *ngIf="answer.answer != 'answer-timeout'">
+            answered {{ answer.correct ? 'corrrectly' : 'incorrectly' }} with <b>{{ answer.answer }}</b>
+        </span>
+        <span *ngIf="answer.answer == 'answer-timeout'">
+            didn't answer in time
+        </span>
         <button class='dispute-button' *ngIf="answer.player.id == player.Id() && game.CanInitDispute(player.Id()) && game.Penalty() && game.RecvPick()" (click)="disputeQuestion()">
             Dispute
         </button>
