require majority dispute

--- a/fe-jeopardy/src/app/dispute/dispute.component.html
+++ b/fe-jeopardy/src/app/dispute/dispute.component.html
@@ -25,6 +25,6 @@
         </button>
     </div>
     <div *ngIf='!player.CanDispute()'>
-        <p>Waiting for other players to confirm the dispute...</p>
+        <p>Waiting for other players to vote on the dispute...</p>
     </div>
 </div>
