google sign in working

--- a/fe-jeopardy/src/app/app.component.less
+++ b/fe-jeopardy/src/app/app.component.less
@@ -61,5 +61,6 @@
         background-color: var(--jeopardy-lightblue);
         border: 1px solid var(--jeopardy-blue);
         border-radius: 0.5em;
+        z-index: 1;
     }
 }
