--- a/fe-jeopardy/src/app/auth/sign-out/sign-out.component.html
+++ b/fe-jeopardy/src/app/auth/sign-out/sign-out.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button (click)="googleLogout()" class="gsi-material-button">
+    <button (click)="googleSignOut()" class="gsi-material-button">
         <div class="gsi-material-button-state"></div>
         <div class="gsi-material-button-content-wrapper">
           <div class="gsi-material-button-icon">
@@ -11,7 +11,7 @@
               <path fill="none" d="M0 0h48v48H0z"></path>
             </svg>
           </div>
-          <span>Log out</span>
+          <span>Sign out</span>
         </div>
       </button>
 </div>
