--- a/fe-jeopardy/src/app/join/join.component.html
+++ b/fe-jeopardy/src/app/join/join.component.html
@@ -6,7 +6,7 @@
         <div class='flex-row gap15'>
             <!-- <button (click)="joinPublicGame()">Join public game</button> -->
             <button (click)="createPrivateGame(0)">Start a new game</button>
-            <button (click)="toggleGameCodeInput()">Join game by code</button>
+            <button (click)="toggleJoinCodeInput()">Join game by code</button>
         </div>
         <div class='flex-row gap15'>
             <div class='flex-column game-inputs'>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div>
-                <input id="game-code" *ngIf="showGameCodeInput" (keydown.enter)="joinGameByCode()" type="text" [(ngModel)]="gameCode" placeholder="Game code">
+                <input id="game-code" *ngIf="showJoinCodeInput" (keydown.enter)="joinGameByCode()" type="text" [(ngModel)]="joinCode" placeholder="Game code">
             </div>
         </div>
     </div>
