--- a/fe-jeopardy/src/app/auth/sign-in/sign-in.component.html
+++ b/fe-jeopardy/src/app/auth/sign-in/sign-in.component.html
@@ -1,8 +1,8 @@
 <div class='flex-column'>
 	<div>
-		<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'"></app-auth-button>
+		<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 	</div>
 	<div>
-		<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'"></app-auth-button>
+		<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
 	</div>
 </div>
