--- a/fe-jeopardy/src/app/auth/auth-button/auth-button.component.less
+++ b/fe-jeopardy/src/app/auth/auth-button/auth-button.component.less
@@ -49,7 +49,8 @@
     align-items: center;
     justify-content: center;
 
-    img {
+    img,
+    ion-icon {
         width: 1.5em;
         height: 1.5em;
     }
