--- a/fe-jeopardy/src/app/auth/sign-out/sign-out.component.html
+++ b/fe-jeopardy/src/app/auth/sign-out/sign-out.component.html
@@ -1,3 +1,3 @@
 <div>
-    <app-auth-button (click)="googleSignOut()" [buttonText]="'Sign out'"></app-auth-button>
+    <app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''"></app-auth-button>
 </div>
