--- a/fe-jeopardy/src/app/auth/auth-button/auth-button.component.less
+++ b/fe-jeopardy/src/app/auth/auth-button/auth-button.component.less
@@ -1,7 +1,9 @@
 .gsi-material-button {
+    user-select: none;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    appearance: none;
     -webkit-appearance: none;
     background-image: none;
     border: 1px solid #747775;
