--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -23,9 +23,10 @@
 				<div *ngIf="!userAuthenticated"  class='flex-column'>
 					<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 					<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
+					<app-auth-button *ngIf='false' (click)="signUp()"  [buttonText]="'Create an account&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
 				</div>
 				<div *ngIf="userAuthenticated">
-					<app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''"></app-auth-button>
+					<app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''" [iconName]="'sign-out'"></app-auth-button>
 				</div>
 			</div>
 		</div>
