--- a/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
+++ b/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
@@ -1,8 +1,9 @@
-<button class="gsi-material-button">
+<button class="gsi-material-button auth-options-button">
 	<div class="gsi-material-button-content-wrapper">
 		<div class='center-image'>
 			<img *ngIf="imgUrl != ''" [src]="imgUrl" alt="">
-			<ion-icon *ngIf="imgUrl == ''" name="log-out-outline"></ion-icon>
+			<ion-icon *ngIf="iconName == 'sign-up'" name="person-add-outline"></ion-icon>
+			<ion-icon *ngIf="iconName == 'sign-out'" name="log-out-outline"></ion-icon>
 		</div>
 		<div>
 			<span>{{buttonText}}</span>
