--- a/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
+++ b/fe-jeopardy/src/app/auth/auth-button/auth-button.component.html
@@ -4,6 +4,7 @@
 			<img *ngIf="imgUrl != ''" [src]="imgUrl" alt="">
 			<ion-icon *ngIf="iconName == 'sign-up'" name="person-add-outline"></ion-icon>
 			<ion-icon *ngIf="iconName == 'sign-out'" name="log-out-outline"></ion-icon>
+			<ion-icon *ngIf="iconName == 'sign-in'" name="log-in-outline"></ion-icon>
 		</div>
 		<div>
 			<span>{{buttonText}}</span>
