--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -23,6 +23,7 @@
 				<div *ngIf="!userAuthenticated"  class='flex-column'>
 					<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 					<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
+					<app-auth-button (click)="startLogin()"  [buttonText]="'Sign in with email&nbsp;&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-in'"></app-auth-button>
 					<app-auth-button (click)="startRegistration()"  [buttonText]="'Create an account&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
 				</div>
 				<div *ngIf="userAuthenticated">
@@ -43,3 +44,4 @@
 <app-analytics *ngIf="modal.showAnalytics()"></app-analytics>
 <app-dispute></app-dispute>
 <app-register *ngIf="modal.showRegister()"></app-register>
+<app-login *ngIf="modal.showLogin()"></app-login>
