--- a/fe-jeopardy/src/app/app.component.html
+++ b/fe-jeopardy/src/app/app.component.html
@@ -23,7 +23,8 @@
 				<div *ngIf="!userAuthenticated"  class='flex-column'>
 					<app-auth-button (click)="signIn('google')"  [buttonText]="'Sign in with Google'" [imgUrl]="'../../../assets/google.png'"></app-auth-button>
 					<app-auth-button (click)="signIn('github')"  [buttonText]="'Sign in with GitHub'" [imgUrl]="'../../../assets/github.png'"></app-auth-button>
-					<app-auth-button *ngIf='false' (click)="signUp()"  [buttonText]="'Create an account&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
+					<app-auth-button (click)="startLogin()"  [buttonText]="'Sign in with email&nbsp;&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-in'"></app-auth-button>
+					<app-auth-button (click)="startRegistration()"  [buttonText]="'Create an account&nbsp;&nbsp;'" [imgUrl]="''" [iconName]="'sign-up'"></app-auth-button>
 				</div>
 				<div *ngIf="userAuthenticated">
 					<app-auth-button (click)="signOut()" [buttonText]="'Sign out'" [imgUrl]="''" [iconName]="'sign-out'"></app-auth-button>
@@ -42,3 +43,5 @@
 <app-instructions *ngIf="modal.showInstructions()"></app-instructions>
 <app-analytics *ngIf="modal.showAnalytics()"></app-analytics>
 <app-dispute></app-dispute>
+<app-register *ngIf="modal.showRegister()"></app-register>
+<app-login *ngIf="modal.showLogin()"></app-login>
